assets/css/ratings.css
/* ... */
.ltc {
    margin-top: 50px;
    border: 1px solid rgba(88, 88, 88, 0.548);
    box-shadow: 3px 3px 3px var(--shadow-color);
}
.ltc:hover {
    transform: translateY(3px) translateX(3px);
    box-shadow: none;
}

.xrp {
    margin-top: 50px;
    border: 1px solid rgba(88, 88, 88, 0.548);
    box-shadow: 3px 3px 3px var(--shadow-color);
}
.xrp:hover {
    transform: translateY(3px) translateX(3px);
    box-shadow: none;
}

.bnb {
    margin-top: 50px;
    margin-bottom: 150px;
    border: 1px solid rgba(88, 88, 88, 0.548);
    box-shadow: 3px 3px 3px var(--shadow-color);
}
.bnb:hover {
    transform: translateY(3px) translateX(3px);
    box-shadow: none;
}

.myChart {
    margin-top: 50px;
    border: 1px solid rgba(88, 88, 88, 0.548);
    box-shadow: 3px 3px 3px var(--shadow-color);
}

.myChart:hover {
    transform: translateY(3px) translateX(3px);
    box-shadow: none;
}

.asset-info {
    grid-area: info;
    display: inline-flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 5% 0 5%;
}

.title {
    display: inline-flex;
    position: relative;
}

@media (max-width: 576px) {
    cards img {
        width: 30px;
    }

    cards h1 {
        margin-left: 10px;
        margin-top: 15px;
        font-size: 10px;
        padding-left: 20px;
    }

    cards h2 {
        margin-left: 50px;
    }

    .filters {
        padding-left: 20%;
        z-index: 999;
        padding-right: 20%;
        height: 80px;
        width: 100%;
        background-color: var(--shadow-header-color);
        position: fixed;

        color: rgba(255, 255, 255, 0.493);
        font-family: "Roboto";
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .cryptoChoixe {
        display: none;
    }

    .filters select {
        width: 100px;
    }

    .container_2 {
        display: none;
    }

    .container {
        position: relative;
        top: 0px;

        width: 90%;
    }

    .btc {
        width: 100%;
    }
    .bnb {
        width: 100%;
    }
    .cosmos {
        width: 100%;
    }

    .ethereum {
        width: 100%;
    }

    .ltc {
        width: 100%;
    }
    .xrp {
        width: 100%;
    }
    .myChart {
        width: 100%;
    }
}

@media (min-width: 576px) and (max-width: 690px) {
    .cryptoChoixe {
        display: none;
    }

    .filters {
        justify-content: center;
    }

    .container {
        position: relative;
        top: 0px;

        margin-bottom: 100px;
        width: 90%;
    }
    .container_2 {
        display: none;
    }

    cards {
        position: relative;
        align-items: center;
    }

    cards h1 {
        margin-left: 10px;
        font-size: 15px;
    }

    ethereum img {
        width: 15px;
        transform: translateY(10px);
    }

    .btc {
        width: 100%;
    }
    .bnb {
        width: 100%;
    }
    .cosmos {
        width: 100%;
    }

    .ethereum {
        width: 100%;
    }

    .ltc {
        width: 100%;
    }
    .xrp {
        width: 100%;
    }
    .myChart {
        width: 100%;
    }
}

@media (min-width: 690px) and (max-width: 1200px) {
    .cryptoChoixe {
        display: none;
    }

    .filters {
        justify-content: center;
        background-color: var(--shadow-header-color);
    }

    .container {
        position: relative;
        top: 0px;
       
        margin-bottom: 50px;
        width: 90%;
    }

    .container_2 {
        display: none;
    }

    cards {
        align-items: center;
    }

    cards h1 {
        margin-left: 10px;
        font-size: 15px;
    }

    ethereum img {
        width: 15px;
        transform: translateY(10px);
    }

    .btc {
        width: 100%;
    }
    .bnb {
        width: 100%;
    }
    .cosmos {
        width: 100%;
    }

    .ethereum {
        width: 100%;
    }

    .ltc {
        width: 100%;
    }
    .xrp {
        width: 100%;
    }
    .myChart {
        width: 100%;
    }
}
/* ... */

